# back/src/controllers/usuario.js
@@ -2,6 +2,7 @@ import db from '../models/index.js';
 import baseController from '../core/base.controller.js';
 import defaultResponse from '../core/base.response.js';
 import bcrypt from 'bcrypt';
+import enviarEmail from '../../email.js';
 
 const Usuario = db.usuarios;
 const Op = db.Sequelize.Op;
@@ -25,16 +26,21 @@ const usuarioController = {
                 senha: senhaCriptografada
             }
 
-            const retorno = await baseController.create(usuario, res, Usuario);
+            const entidade = await baseController.create(usuario, res, Usuario);
 
-            res.send(defaultResponse(true, "Usuário criado com sucesso", retorno));
+            return enviarEmail(
+                req.body.email,
+                'Confirmar usuário - Nutri App',
+                `<a href="http://10.0.0.100:3000/confirmar-usuario/${entidade.id}">Clique aqui para confirmar seu usuário</a>`,
+            () => {
+                return res.send(defaultResponse(true, `O email de confirmação foi enviado`));
+            });
         } catch (error) {
-            
-            res.send(defaultResponse(false, error));
+            res.send(defaultResponse(false, 'Erro não identificado'));
         }
     },
 
-    login: async function(req, res) {
+    login: async function (req, res) {
         /* #swagger.tags = ['Usuário'] */
         /* #swagger.parameters['Usuário'] = {
                 in: 'body',
@@ -47,12 +53,12 @@ const usuarioController = {
             const usuario = await Usuario.findOne({
                 where: { email: { [Op.like]: req.body.email } }
             });
-            
-            if(!usuario) throw "Usuário inexistente.";
 
-            if(await bcrypt.compare(req.body.senha, usuario.senha)){
+            if (!usuario) throw "Usuário inexistente.";
+
+            if (await bcrypt.compare(req.body.senha, usuario.senha)) {
                 req.session.loggedin = true;
-				req.session.username = req.body.email;
+                req.session.username = req.body.email;
                 req.session.save();
 
                 return res.send(defaultResponse(true, "Logado com sucesso!!!", usuario));
@@ -64,10 +70,10 @@ const usuarioController = {
         }
     },
 
-    logout: function(req, res) {
+    logout: function (req, res) {
         /* #swagger.tags = ['Usuário'] */
         if (!req.session.loggedin) return res.send(defaultResponse(false, "Primeiro efetue um login."));
-        
+
         req.session.loggedin = false;
         req.session.username = null;
         req.session.destroy();
@@ -75,13 +81,79 @@ const usuarioController = {
         res.send(defaultResponse(true, "Usuário deslogado com sucesso"));
     },
 
-    restricted_func: function(req,res) {
+    recuperarSenha: async function (req, res) {
+        /* #swagger.tags = ['Usuário'] */
+        /* #swagger.parameters['Usuário'] = {
+                in: 'body',
+                schema: {
+                    $email: "joao678@gmail.com",
+                }
+        } */
+        try {
+            const usuario = await Usuario.findOne({
+                where: { email: { [Op.like]: req.body.email } }
+            });
+
+            const usuarioId = usuario.id;
+
+            return enviarEmail(
+                req.body.email,
+                'Recuperar senha - Nutri App',
+                `Clique aqui para recuperar sua senha: <a href="http://10.0.0.100:3000/alterar-senha/${usuarioId}">Recuperar senha</a>`,
+                () => {
+                    return res.send(defaultResponse(true, `O email de recuperação foi enviado`));
+                });
+        } catch (error) {
+            return res.send(defaultResponse(false, error || `O email informado não pertence a nenhum usuário.`));
+        }
+    },
+
+    alterarSenha: async function (req, res) {
+        /* #swagger.tags = ['Usuário'] */
+        /* #swagger.parameters['Usuário'] = {
+                in: 'body',
+                schema: {
+                    $id: "",
+                    $senha: "",
+                }
+        } */
+        const senhaCriptografada = await bcrypt.hash(req.body.senha, 10);
+
+        Usuario.update({ senha: senhaCriptografada }, {
+            where: { id: req.body.id }
+        }).then(num => {
+            if (num == 1) res.send(defaultResponse(true, `A senha foi alterada com sucesso`));
+            else res.send(defaultResponse(false, `Ocorreu um erro ao alterar a senha`));
+        }).catch(err => {
+            res.send(defaultResponse(false, `Ocorreu um erro desconhecido: ${err}`));
+        });
+    },
+
+    confirmar: async function (req, res) {
+        /* #swagger.tags = ['Usuário'] */
+        /* #swagger.parameters['Usuário'] = {
+                in: 'body',
+                schema: {
+                    $id: "",
+                }
+        } */
+        Usuario.update({ confirmado: true }, {
+            where: { id: req.body.id }
+        }).then(num => {
+            if (num == 1) res.send(defaultResponse(true, `O usuário com sucesso`));
+            else res.send(defaultResponse(false, `Ocorreu um erro ao confirmar o usuário`));
+        }).catch(err => {
+            res.send(defaultResponse(false, `Ocorreu um erro desconhecido: ${err}`));
+        });
+    },
+
+    restricted_func: function (req, res) {
         /* #swagger.tags = ['Usuário'] */
         if (req.session.loggedin)
             return res.send(defaultResponse(true, `O usuário ${req.session.username} está logado.`));
-        
+
         return res.send(defaultResponse(false, `O usuário não pode acessar este conteúdo`));
-    }
+    },
 
     // findAll: function (req, res) {
     //     /* 	#swagger.tags = ['Usuário'] */
