# back/src/routes/usuarios.routes.js
@@ -4,13 +4,22 @@ import express from 'express';
 const router = express.Router();
 
 //create 
-router.post("/", usuarioController.create);
+router.post("/create", usuarioController.create);
 
 //login 
 router.post("/login", usuarioController.login);
 
 //logout
 router.post("/logout", usuarioController.logout);
+
+//recuperarSenha
+router.post("/recuperar-senha", usuarioController.recuperarSenha);
+
+//alterarSenha
+router.post("/alterar-senha", usuarioController.alterarSenha);
+
+//confirmar
+router.post("/confirmar", usuarioController.confirmar);
 
 //restricted_func
 router.get("/restricted_func", usuarioController.restricted_func);
